@@ -29,7 +29,8 @@ enum dpi_desync_mode {
 	DESYNC_DISORDER2,
 	DESYNC_SPLIT,
 	DESYNC_SPLIT2,
-	DESYNC_IPFRAG2
+	DESYNC_IPFRAG2,
+	DESYNC_HOPBYHOP
 };
 
 extern const char *fake_http_request_default;
@@ -38,6 +39,7 @@ extern const uint8_t fake_tls_clienthello_default[517];
 enum dpi_desync_mode desync_mode_from_string(const char *s);
 bool desync_valid_zero_stage(enum dpi_desync_mode mode);
 bool desync_valid_first_stage(enum dpi_desync_mode mode);
+bool desync_only_first_stage(enum dpi_desync_mode mode);
 bool desync_valid_second_stage(enum dpi_desync_mode mode);
 
 void desync_init();
